--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,16 +12,16 @@
 </head>
 
 <body>
-  <header class="main-header">
-    <a class="main-header__logo" href="index.html">
-      <span class="main-header__image visually-hidden">/</span>
-      <span class="main-header__logo--text visually-hidden">/</span>
+  <header>
+    <a class="header__logo" href="index.html">
+      <span class="header__image visually-hidden">/</span>
+      <span class="header__logo--text visually-hidden">/</span>
     </a>
     </a>
-    <nav class="main-header__nav main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
+    <nav class="nav">
+      <button class="nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <div class="nav__wrapper">
+        <ul class="nav__list site-list">
           <li class="site-list__item"><a href="index.html">Главная</a></li>
           <li class="site-list__item"><a href="catalog.html">Каталог продукции</a></li>
           <li class="site-list__item"><a href="form.html">Подбор программы</a></li>
