--- a/source/index.html
+++ b/source/index.html
@@ -12,16 +12,16 @@
 </head>
 
 <body>
-  <header class="main-header">
-    <a class="main-header__logo" href="index.html">
-      <span class="main-header__image visually-hidden">/</span>
-      <span class="main-header__logo--text visually-hidden">/</span>
+  <header>
+    <a class="header__logo" href="index.html">
+      <span class="header__image visually-hidden">/</span>
+      <span class="header__logo--text visually-hidden">/</span>
     </a>
     </a>
-    <nav class="main-header__nav main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
+    <nav>
+      <button class="nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <div class="nav__wrapper">
+        <ul class="nav__list site-list">
           <li class="site-list__item"><a href="index.html">Главная</a></li>
           <li class="site-list__item"><a href="catalog.html">Каталог продукции</a></li>
           <li class="site-list__item"><a href="form.html">Подбор программы</a></li>
@@ -29,22 +29,22 @@
       </div>
     </nav>
   </header>
-    <main class="main">
+    <main>
       <span class="main__image--background visually-hidden">/</span>
-    <section class="main__header header">
-      <h1 class="header__title">Функциональное питание для котов</h1>
-      <p class="header__paragraph">Занялся собой? Займись котом!</p>
+    <section class="hero">
+      <h1 class="hero__title">Функциональное питание для котов</h1>
+      <p class="hero__paragraph">Занялся собой? Займись котом!</p>
       <picture>
         <source type="image/png" media="(min-width: 1440px)" width="552" height="499"
           srcset="images/index-can-desktop@1x.png 1x, images/index-can-desktop@2x.png  2x">
         <source type="image/png" media="(min-width: 768px)" width="709" height="609"
           srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png  2x">
-        <img class="header__image" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" width="280" height="270"
+        <img class="hero__image" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" width="280" height="270"
           alt="Корм Cat Energy">
       </picture>
-      <button class="header__button" type="button">Подобрать программу</button>
+      <button class="hero__button" type="button">Подобрать программу</button>
     </section>
-    <section class="main__option option">
+    <section class="option">
       <ul class="option__list">
         <li class="option__item">
           <picture>
@@ -74,29 +74,25 @@
         </li>
       </ul>
     </section>
-    <section class="main__advantages advantages">
+    <section class="advantages">
       <h2 class="visually-hidden">Наши преимущества</h2>
       <h2 class="advantages__title">Как это работает</h2>
       <ul class="advantages__list">
-        <li class="advantages__item">
-          <span class="advantages__background advantages__image1"></span>
+        <li class="advantages__item advantages__image1">
           <p class="advantages__paragraph">Функциональное питание содержит только полезные питательные вещества.</p>
         </li>
-        <li class="advantages__item">
-          <span class="advantages__background advantages__image2"></span>
+        <li class="advantages__item advantages__image2">
            <p class="advantages__paragraph">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
         </li>
-        <li class="advantages__item">
-          <span class="advantages__background advantages__image3">3</span>
+        <li class="advantages__item advantages__image3">
           <p class="advantages__paragraph">Замените один-два приема обычной еды на наше функциональное питание.</p>
         </li>
-        <li class="advantages__item">
-          <span class="advantages__background advantages__image4">4</span>
+        <li class="advantages__item advantages__image4">
           <p class="advantages__paragraph">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
         </li>
       </ul>
     </section>
-    <section class="main__aside aside">
+    <section class="aside">
       <h2 class="aside__title">Живой пример</h2>
       <div class="aside__wrapper">
         <p class="aside__paragraph">Борис сбросил 5 кг за 2 месяца, просто заменив свой
@@ -119,7 +115,7 @@
       </picture>
     </section>
   </main>
-  <footer class="footer">
+  <footer>
     <section class="footer__top footer-top">
   <div class="footer-top__wrapper footer__top-index">
     <h3 class="footer-top__title">Приглашаем к сотрудничеству дилеров!</h3>
