--- a/source/form.html
+++ b/source/form.html
@@ -12,16 +12,16 @@
 </head>
 
 <body>
-  <header class="main-header">
-    <a class="main-header__logo" href="index.html">
-      <span class="main-header__image visually-hidden">/</span>
-      <span class="main-header__logo--text visually-hidden">/</span>
+  <header>
+    <a class="header__logo" href="index.html">
+      <span class="header__image visually-hidden">/</span>
+      <span class="header__logo--text visually-hidden">/</span>
     </a>
     </a>
-    <nav class="main-header__nav main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
+    <nav class="nav">
+      <button class="nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <div class="nav__wrapper">
+        <ul class="nav__list site-list">
           <li class="site-list__item"><a href="index.html">Главная</a></li>
           <li class="site-list__item"><a href="catalog.html">Каталог продукции</a></li>
           <li class="site-list__item"><a href="form.html">Подбор программы</a></li>
@@ -29,8 +29,8 @@
       </div>
     </nav>
   </header>
-  <main class="main-container">
-    <div class="main-container__section info-block">
+  <main>
+    <div class="info-block">
       <form class="info-block__form" action="#">
         <fieldset class="info-block__fieldset">
           <legend class="visually-hidden">Подбор программы</legend>
@@ -56,7 +56,7 @@
         </fieldset>
       </form>
     </div>
-    <div class="main-container__contacts contacts">
+    <div class="contacts">
       <form class="contacts__form" action="#">
         <fieldset class="contacts__fieldset">
           <legend class="contacts__title">Контактные данные (владельца кота)</legend>
@@ -67,7 +67,7 @@
         </fieldset>
       </form>
     </div>
-    <div class="main-container__comments comments">
+    <div class="comments">
       <form class="comments__form" action="#">
         <fieldset class="comments__fieldset">
           <legend class="comments__title">Комментарий</legend>
@@ -76,7 +76,7 @@
         </fieldset>
       </form>
     </div>
-    <div class="main-container__additional additional">
+    <div class="additional">
       <form class="additional__form" action="#">
         <fieldset class="additional__fieldset">
           <legend class="additional__title">Дополнительно</legend>
