--- a/source/form.html
+++ b/source/form.html
@@ -1,216 +1,185 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="favicons/32.svg">
-<link rel="icon" href="favicons/32.svg" type="image/svg+xml">
-<link rel="manifest" href="manifest.webmanifest">
-<link rel="stylesheet" href="./styles/styles.css">
-<title>HTML Academy: Кэт энерджи</title>
-    </head>
-    <body>
-<header class="header">
-  <a class="header__link-logo" href="index.html">
-    <picture>
-<source
-type="image/png"
-media="(min-width: 1440px)"
-width="70"
-height="59"
-srcset="images/logo-desktop"
->
-<source
-type="image/png"
-media="(min-width: 768px)"
-width="60"
-height="50"
-srcset="images/logo-tablet"
->
-<img
-class="header__image"
-src="images/logo-mobile.svg"
-width="33"
-height="38"
-alt="Логотип Cat Energy."
->
-  </picture>
-  <img src="images/logo-text.svg"
-  width="101" height="18" alt="Логотип Cat Energy.">
-  </a>
- <nav class="nav">
-  <button class="nav__toggle" type="button">
-<span class="visually-hidden">Открыть меню.</span>
-  </button>
-  <div class="nav__wrapper">
-<ul class="nav__list nav-list">
-  <li class="nav-list__item">
-<a class="nav-list__link" href="index.html">Главная</a>
-  </li>
-  <li class="nav-list__item">
-<a class="nav-list__link" href="catalog.html">Каталог продукции</a>
-  </li>
-  <li class="nav-list__item">
-<a class="nav-list__link" href="form.html">Подбор программы</a>
-  </li>
-</ul>
-  </div>
-</nav>
-    </header>
-    <main>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="favicons/32.svg">
+  <link rel="icon" href="favicons/32.svg" type="image/svg+xml">
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="stylesheet" href="./styles/styles.css">
+  <title>HTML Academy: Кэт энерджи</title>
+</head>
+
+<body>
+  <header class="header">
+    <a class="header__link-logo" href="index.html">
+      <picture>
+        <source type="image/png" media="(min-width: 1440px)" width="70" height="59" srcset="images/logo-desktop">
+        <source type="image/png" media="(min-width: 768px)" width="60" height="50" srcset="images/logo-tablet">
+        <img class="header__image" src="images/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy.">
+      </picture>
+      <img src="images/logo-text.svg" width="101" height="18" alt="Логотип Cat Energy.">
+    </a>
+    <nav class="nav">
+      <button class="nav__toggle" type="button">
+        <span class="visually-hidden">Открыть меню.</span>
+      </button>
+      <div class="nav__wrapper">
+        <ul class="nav__list nav-list">
+          <li class="nav-list__item">
+            <a class="nav-list__link" href="index.html">Главная</a>
+          </li>
+          <li class="nav-list__item">
+            <a class="nav-list__link" href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="nav-list__item">
+            <a class="nav-list__link" href="form.html">Подбор программы</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main>
     <div class="info-block">
-<h1 class="info-block__title title-h2">Подбор программы</h1>
-<p class="info-block__text">Заполните анкету, и мы подберем программу питания для вашего кота</p>
-<form class="info-block__form form" action="#">
+      <h1 class="info-block__title title-h2">Подбор программы</h1>
+      <p class="info-block__text">Заполните анкету, и мы подберем программу питания для вашего кота</p>
+      <form class="info-block__form form" action="#">
 
-<fieldset class="form__fieldset" id="pet-form">
-<legend class="visually-hidden">Данные питомца.</legend>
- <div class="form__section">
-  <div class="form__item">
-  <label class="form__label" for="pet-form-name">Имя:*</label>
-  <input class="form__input" type="text" id="pet-form-name" name="data" placeholder="Барсик">
-</div>
-<div class="form__item">
-  <label class="form__label" for="pet-form-weight">Вес (кг):*</label>
-  <input class="form__input" type="number" id="pet-form-weight" min="0" max="500" name="data"
-    placeholder="7">
-  </div>
-  <div class="form__item">
-  <label class="form__label" for="pet-form-age">Возраст (лет):</label>
-  <input class="form__input" type="number" id="pet-form-age" min="0" max="70" name="data" placeholder="7">
-</div>
-  <div class="info-block__radio-button radio-button">
-    <div class="form__item">
-<input class="form__input" type="radio" id="pet-form-weight-loss" name="diet" checked>
-<label class="form__label" for="pet-form-weight-loss">Похудение</label></div>
-    <div class="form__item">
-<input class="form__input" type="radio" id="pet-form-weight-gain" name="diet">
-<label class="form__label" for="pet-form-weight-gain">Набор массы</label></div>
-    <div class="form__item">
-<input class="form__input" type="radio" id="pet-form-idk" name="diet">
-<label class="form__label" for="pet-form-idk">Не знаю (Нужен ваш совет)</label>
-    </div>
-  </div>
-</div>
-</fieldset>
+        <fieldset class="form__fieldset" id="pet-form">
+          <legend class="visually-hidden">Данные питомца.</legend>
+          <div class="form__section">
+            <div class="form__item">
+              <label class="form__label" for="pet-form-name">Имя:*</label>
+              <input class="form__input" type="text" id="pet-form-name" name="data" placeholder="Барсик">
+            </div>
+            <div class="form__item">
+              <label class="form__label" for="pet-form-weight">Вес (кг):*</label>
+              <input class="form__input" type="number" id="pet-form-weight" min="0" max="500" name="data"
+                placeholder="7">
+            </div>
+            <div class="form__item">
+              <label class="form__label" for="pet-form-age">Возраст (лет):</label>
+              <input class="form__input" type="number" id="pet-form-age" min="0" max="70" name="data" placeholder="7">
+            </div>
+            <div class="info-block__radio-button radio-button">
+              <div class="form__item">
+                <input class="form__input" type="radio" id="pet-form-weight-loss" name="diet" checked>
+                <label class="form__label" for="pet-form-weight-loss">Похудение</label>
+              </div>
+              <div class="form__item">
+                <input class="form__input" type="radio" id="pet-form-weight-gain" name="diet">
+                <label class="form__label" for="pet-form-weight-gain">Набор массы</label>
+              </div>
+              <div class="form__item">
+                <input class="form__input" type="radio" id="pet-form-idk" name="diet">
+                <label class="form__label" for="pet-form-idk">Не знаю (Нужен ваш совет)</label>
+              </div>
+            </div>
+          </div>
+        </fieldset>
 
 
-<fieldset class="form__contacts-owner" id="owner-form">
-<legend class="form__contacts-owner-title title-h3">Контактные данные (владельца кота)</legend>
-<div class="form__item">
-  <label class="form__label" for="owner-form-email">E-mail:*</label>
-  <input class="form__input" type="email" id="owner-form-email" name="кuklachev@gmail.com">
-  </div>
-<div class="form__item">
-  <label class="form__label" for="owner-form-number">Телефон:*</label>
-  <input class="form__input" type="number" id="owner-form-number" name="8 (960) 900-60-90">
- </div>
- </fieldset>
+        <fieldset class="form__contacts-owner" id="owner-form">
+          <legend class="form__contacts-owner-title title-h3">Контактные данные (владельца кота)</legend>
+          <div class="form__item">
+            <label class="form__label" for="owner-form-email">E-mail:*</label>
+            <input class="form__input" type="email" id="owner-form-email" name="кuklachev@gmail.com">
+          </div>
+          <div class="form__item">
+            <label class="form__label" for="owner-form-number">Телефон:*</label>
+            <input class="form__input" type="number" id="owner-form-number" name="8 (960) 900-60-90">
+          </div>
+        </fieldset>
 
-<fieldset class="form__comments" id="comment-form">
-<legend class="form__comments-title title-h3">Комментарий</legend>
-<input class="form__input" type="text" id="comment-form-comments" name="Расскажите обо всех повадках кота">
-<label class="form__label" for="comment-form-comments">Комментарий</label>
-</fieldset>
+        <fieldset class="form__comments" id="comment-form">
+          <legend class="form__comments-title title-h3">Комментарий</legend>
+          <input class="form__input" type="text" id="comment-form-comments" name="Расскажите обо всех повадках кота">
+          <label class="form__label" for="comment-form-comments">Комментарий</label>
+        </fieldset>
 
-<fieldset class="form__checbox" id="add-form">
-<legend class="form__checbox-title title-h3">Дополнительно</legend>
-<div class="form__item">
-  <input class="form__input" type="checkbox" id="add-form-sugar" name="additional" checked>
-  <label class="form__label" for="add-form-sugar">Сахарозаменитель</label>
-</div>
-<div class="form__item">
-  <input class="form__input" type="checkbox" id="add-form-water" name="additional">
-  <label class="form__label" for="add-form-water">Питьевая вода</label>
-</div>
-<div class="form__item">
-  <input class="form__input" type="checkbox" id="add-form-milk" name="additional">
-  <label class="form__label" for="add-form-milk">Молоко</label>
-</div>
-<div class="form__item">
-  <input class="form__input" type="checkbox" id="add-form-vitamins" name="additional">
-  <label class="form__label" for="add-form-vitamins">Витамины</label>
-</div>
-<button class="form__button button button--primary" type="button">Отправить заявку</button>
-</fieldset>
-</form>
-<p class="info-block__add-text">* — Обязательные поля</p>
+        <fieldset class="form__checbox" id="add-form">
+          <legend class="form__checbox-title title-h3">Дополнительно</legend>
+          <div class="form__item">
+            <input class="form__input" type="checkbox" id="add-form-sugar" name="additional" checked>
+            <label class="form__label" for="add-form-sugar">Сахарозаменитель</label>
+          </div>
+          <div class="form__item">
+            <input class="form__input" type="checkbox" id="add-form-water" name="additional">
+            <label class="form__label" for="add-form-water">Питьевая вода</label>
+          </div>
+          <div class="form__item">
+            <input class="form__input" type="checkbox" id="add-form-milk" name="additional">
+            <label class="form__label" for="add-form-milk">Молоко</label>
+          </div>
+          <div class="form__item">
+            <input class="form__input" type="checkbox" id="add-form-vitamins" name="additional">
+            <label class="form__label" for="add-form-vitamins">Витамины</label>
+          </div>
+          <button class="form__button button button--primary" type="button">Отправить заявку</button>
+        </fieldset>
+      </form>
+      <p class="info-block__add-text">* — Обязательные поля</p>
     </div>
     <section class="contacts">
-<div class="contacts__wrapper">
-<h2 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h2>
-<address class="contacts__address-wrapper">
-  <span class="contacts__address">ул. Большая Конюшенная, д. 19/8</span>
-  <span class="contacts__city">Санкт-Петербург</span>
-</address>
-    </div>
-    <picture>
-<source
-type="image/png"
-media="(min-width: 1440px)"
-width="1440"
-height="400"
-srcset="images/map-desktop@1x.png 1x, images/map-desktop@2x.png  2x"
->
-<source
-type="image/png"
-media="(min-width: 768px)"
-width="768"
-height="400"
-srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png  2x"
->
-<img
-class="contacts__map"
-src="images/map-mobile@1x.png"
-srcset="images/map-mobile@2x.png 2x"
-width="320"
-height="362"
-alt="Карта."
->
-  </picture>
+      <div class="contacts__wrapper">
+        <h2 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h2>
+        <address class="contacts__address-wrapper">
+          <span class="contacts__address">ул. Большая Конюшенная, д. 19/8</span>
+          <span class="contacts__city">Санкт-Петербург</span>
+        </address>
+      </div>
+      <picture>
+        <source type="image/png" media="(min-width: 1440px)" width="1440" height="400"
+          srcset="images/map-desktop@1x.png 1x, images/map-desktop@2x.png  2x">
+        <source type="image/png" media="(min-width: 768px)" width="768" height="400"
+          srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png  2x">
+        <img class="contacts__map" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320"
+          height="362" alt="Карта.">
+      </picture>
     </section>
-</main>
-<footer class="footer">
-<a class="footer__logo" href="index.html">
-<img src="images/logo-text.svg"
-width="128" height="24" alt="Логотип Cat Energy.">
-</a>
-<div class="footer__social social">
-  <ul class="social__list">
-<li class="social__item">
-<a class="social_link" href="https://vk.com">
-    <svg class="social__image" width="29" height="17">
-<use href="images/icons/stack.svg#vkontakte"></use>
-    </svg>
-    <span class="visually-hidden">Вконтакте.</span>
-</a>
-</li>
-<li class="social__item">
-<a class="social_link" href="https://youtube.com">
-    <svg class="social__image" width="24" height="18">
-<use href="images/icons/stack.svg#youtube"></use>
-    </svg>
-    <span class="visually-hidden">Youtube.</span>
-</a>
-</li>
-<li class="social__item">
-<a class="social_link" href="https://telegram.com">
-    <svg class="social__image" width="19" height="17">
-<use href="images/icons/stack.svg#telegram"></use>
-    </svg>
-    <span class="visually-hidden">Телеграм.</span>
-</a>
-</li>
-  </ul>
-</div>
-<div class="footer__dev dev">
-  <a class="dev__link" href="https://htmlacademy.ru">
-<p class="dev__text">HTML Academy</p>
-<svg class="dev__image" width="27" height="34">
-<use href="images/icons/stack.svg#html-academy"></use>
-</svg>
-  </a>
-</div>
-    <footer>
+  </main>
+  <footer class="footer">
+    <a class="footer__logo" href="index.html">
+      <img src="images/logo-text.svg" width="128" height="24" alt="Логотип Cat Energy.">
+    </a>
+    <div class="footer__social social">
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social_link" href="https://vk.com">
+            <svg class="social__image" width="29" height="17">
+              <use href="images/icons/stack.svg#vkontakte"></use>
+            </svg>
+            <span class="visually-hidden">Вконтакте.</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social_link" href="https://youtube.com">
+            <svg class="social__image" width="24" height="18">
+              <use href="images/icons/stack.svg#youtube"></use>
+            </svg>
+            <span class="visually-hidden">Youtube.</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social_link" href="https://telegram.com">
+            <svg class="social__image" width="19" height="17">
+              <use href="images/icons/stack.svg#telegram"></use>
+            </svg>
+            <span class="visually-hidden">Телеграм.</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer__dev dev">
+      <a class="dev__link" href="https://htmlacademy.ru">
+        <p class="dev__text">HTML Academy</p>
+        <svg class="dev__image" width="27" height="34">
+          <use href="images/icons/stack.svg#html-academy"></use>
+        </svg>
+      </a>
+    </div>
+  </footer>
 </body>
+
 </html>
