--- a/source/index.html
+++ b/source/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
+
+<head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="favicons/32.svg">
@@ -8,254 +9,188 @@
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="./styles/styles.css">
   <title>HTML Academy: Кэт энерджи</title>
-    </head>
-    <body>
+</head>
+
+<body>
   <header class="header">
-<a class="header__link-logo" href="index.html">
-  <picture>
-    <source
-  type="image/png"
-  media="(min-width: 1440px)"
-  width="70"
-  height="59"
-  srcset="images/logo-desktop.svg"
-    >
-    <source
-  type="image/png"
-  media="(min-width: 768px)"
-  width="60"
-  height="50"
-  srcset="images/logo-tablet.svg"
-    >
-    <img
-  class="header__image"
-  src="images/logo-mobile.svg"
-  width="33"
-  height="38"
-  alt="Логотип Cat Energy."
-    >
-</picture>
-<img src="images/logo-text.svg"
-width="101" height="18" alt="Логотип Cat Energy.">
-</a>
-   <nav class="nav">
-<button class="nav__toggle" type="button">
-    <span class="visually-hidden">Открыть меню.</span>
-</button>
-<div class="nav__wrapper">
-    <ul class="nav__list nav-list">
-<li class="nav-list__item">
-  <a class="nav-list__link" href="index.html">Главная</a>
-    </li>
-    <li class="nav-list__item">
-  <a class="nav-list__link" href="catalog.html">Каталог продукции</a>
-    </li>
-    <li class="nav-list__item">
-  <a class="nav-list__link" href="form.html">Подбор программы</a>
-    </li>
-    </ul>
-</div>
-  </nav>
-    </header>
-    <main>
-  <section class="hero">
-<h1 class="hero__title">Функциональное питание для котов</h1>
-<p class="hero__text">Занялся собой? Займись котом!</p>
-<picture>
-    <source
-  type="image/png"
-  media="(min-width: 1440px)"
-  width="552"
-  height="499"
-  srcset="images/index-can-desktop@1x.png 1x, images/index-can-desktop@2x.png  2x"
-    >
-    <source
-  type="image/png"
-  media="(min-width: 768px)"
-  width="709"
-  height="609"
-  srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png  2x"
-    >
-    <img
-  class="hero__image"
-  src="images/index-can-mobile@1x.png"
-  srcset="images/index-can-mobile@2x.png 2x"
-  width="280"
-  height="270"
-  alt="Корм Cat Energy."
-    >
-</picture>
-<button class="hero__button button button--primary" type="button">Подобрать программу</button>
-  </section>
-  <section class="options">
-    <h2 class="visually-hidden">Программы.</h2>
-<ul class="options__list">
-    <li class="options__item">
-  <svg class="options__image" width="36" height="50">
-<use href="images/icons/cat-slim.svg"></use>
-  </svg>
-  <h3 class="options__title">Похудение</h3>
-  <p class="options__text">
-Ваш кот весит больше собаки и почти утратил способность
-лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-  </p>
-  <a class="options__link" href="catalog.html">
-<span>Каталог slim</span>
-  </a>
-    </li>
-    <li class="options__item">
-  <svg class="options__image" width="67" height="28">
-<use href="images/icons/cat-sport.svg"></use>
-  </svg>
-  <h3 class="options__title">Набор массы</h3>
-  <p class="options__text">
-Заработать авторитет среди дворовых котов и даже собак?
-Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
-  </p>
-  <a class="options__link" href="catalog.html">
-<span>Каталог pro</span>
-  </a>
-    </li>
-</ul>
-  </section>
-  <section class="advantages">
-<h2 class="advantages__title title-h2">Как это работает</h2>
-<ol class="advantages__list">
-    <li class="advantages__item advantages__item--image-1">
-  <p class="advantages__text">Функциональное питание содержит только полезные питательные вещества.</p>
-    </li>
-    <li class="advantages__item advantages__item--image-2">
-  <p class="advantages__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
-    </li>
-    <li class="advantages__item advantages__item--image-3">
-  <p class="advantages__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
-    </li>
-    <li class="advantages__item advantages__item--image-4">
-  <p class="advantages__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
-    </li>
-</ol>
-  </section>
-  <section class="example">
-<h2 class="example__title title-h2">Живой пример</h2>
-<div class="example__wrapper">
-    <p class="example__text">
-  Борис сбросил 5 кг за 2 месяца, просто заменив свой
-    обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих
-    привычек и по-прежнему спит по 16 часов в день.
-    </p>
-    <div class="example__info">
-<p class="example__text">Снижение веса</p>
-    <span class="example__span">5 КГ</span>
-    </div>
-    <div class="example__info">
-<p class="example__text">Затрачено времени</p>
-    <span class="example__span">60 ДНЕЙ</span>
-    </div>
-    <div class="example__aside">
-    <span>Затраты на питание:</span>
-    <span>15 000 РУБ.</span>
-  </div>
-</div>
-<picture>
-    <source
-  type="image/png"
-  media="(min-width: 1440px)"
-  width="560"
-  height="512"
-  srcset="images/slides-cat-desktop@1x.png 1x, images/slides-cat-desktop@2x.png 2x"
-    >
-    <source
-  type="image/png"
-  media="(min-width: 768px)"
-  width="560"
-  height="512"
-  srcset="images/slides-cat-tablet@1x.png 1x, images/slides-cat-tablet@2x.png 2x"
-    >
-    <img
-  class="example__image"
-  src="images/slides-cat-mobile@1x.png"
-  srcset="images/slides-cat-mobile@2x.png 2x"
-  width="280"
-  height="256"
-  alt="Сравнение толстого и худого кота."
-    >
-</picture>
-  </section>
-  <section class="contacts">
-    <div class="contacts__wrapper">
-<h2 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h2>
-<address class="contacts__address-wrapper">
-    <span class="contacts__address">ул. Большая Конюшенная, д. 19/8</span>
-    <span class="contacts__city">Санкт-Петербург</span>
-</address>
-  </div>
-  <picture>
-    <source
-  type="image/png"
-  media="(min-width: 1440px)"
-  width="1440"
-  height="400"
-  srcset="images/map-desktop@1x.png 1x, images/map-desktop@2x.png  2x"
-    >
-    <source
-  type="image/png"
-  media="(min-width: 768px)"
-  width="768"
-  height="400"
-  srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png  2x"
-    >
-    <img
-  class="contacts__map"
-  src="images/map-mobile@1x.png"
-  srcset="images/map-mobile@2x.png 2x"
-  width="320"
-  height="362"
-  alt="Карта."
-    >
-</picture>
-  </section>
-    </main>
-    <footer class="footer">
-<a class="footer__logo" href="index.html">
-<img src="images/logo-text.svg"
-width="128" height="24" alt="Логотип Cat Energy.">
-</a>
-<div class="footer__social social">
-    <ul class="social__list">
-  <li class="social__item">
-<a class="social_link" href="https://vk.com">
-    <svg class="social__image" width="29" height="17">
-  <use href="images/icons/stack.svg#vkontakte"></use>
-    </svg>
-    <span class="visually-hidden">Вконтакте.</span>
-</a>
-  </li>
-  <li class="social__item">
-<a class="social_link" href="https://youtube.com">
-    <svg class="social__image" width="24" height="18">
-  <use href="images/icons/stack.svg#youtube"></use>
-    </svg>
-    <span class="visually-hidden">Youtube.</span>
-</a>
-  </li>
-  <li class="social__item">
-<a class="social_link" href="https://telegram.com">
-    <svg class="social__image" width="19" height="17">
-  <use href="images/icons/stack.svg#telegram"></use>
-    </svg>
-    <span class="visually-hidden">Телеграм.</span>
-</a>
-  </li>
-    </ul>
-</div>
-<div class="footer__dev dev">
-    <a class="dev__link" href="https://htmlacademy.ru">
-  <p class="dev__text">HTML Academy</p>
-  <svg class="dev__image" width="27" height="34">
-<use href="images/icons/stack.svg#html-academy"></use>
-  </svg>
+    <a class="header__link-logo" href="index.html">
+      <picture>
+        <source type="image/png" media="(min-width: 1440px)" width="70" height="59" srcset="images/logo-desktop.svg">
+        <source type="image/png" media="(min-width: 768px)" width="60" height="50" srcset="images/logo-tablet.svg">
+        <img class="header__image" src="images/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy.">
+      </picture>
+      <img src="images/logo-text.svg" width="101" height="18" alt="Логотип Cat Energy.">
     </a>
-</div>
-  <footer>
+    <nav class="nav">
+      <button class="nav__toggle" type="button">
+        <span class="visually-hidden">Открыть меню.</span>
+      </button>
+      <div class="nav__wrapper">
+        <ul class="nav__list nav-list">
+          <li class="nav-list__item">
+            <a class="nav-list__link" href="index.html">Главная</a>
+          </li>
+          <li class="nav-list__item">
+            <a class="nav-list__link" href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="nav-list__item">
+            <a class="nav-list__link" href="form.html">Подбор программы</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section class="hero">
+      <h1 class="hero__title">Функциональное питание для котов</h1>
+      <p class="hero__text">Занялся собой? Займись котом!</p>
+      <picture>
+        <source type="image/png" media="(min-width: 1440px)" width="552" height="499"
+          srcset="images/index-can-desktop@1x.png 1x, images/index-can-desktop@2x.png  2x">
+        <source type="image/png" media="(min-width: 768px)" width="709" height="609"
+          srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png  2x">
+        <img class="hero__image" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x"
+          width="280" height="270" alt="Корм Cat Energy.">
+      </picture>
+      <button class="hero__button button button--primary" type="button">Подобрать программу</button>
+    </section>
+    <section class="options">
+      <h2 class="visually-hidden">Программы.</h2>
+      <ul class="options__list">
+        <li class="options__item">
+          <svg class="options__image" width="36" height="50">
+            <use href="images/icons/cat-slim.svg"></use>
+          </svg>
+          <h3 class="options__title">Похудение</h3>
+          <p class="options__text">
+            Ваш кот весит больше собаки и почти утратил способность
+            лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+          </p>
+          <a class="options__link" href="catalog.html">
+            <span>Каталог slim</span>
+          </a>
+        </li>
+        <li class="options__item">
+          <svg class="options__image" width="67" height="28">
+            <use href="images/icons/cat-sport.svg"></use>
+          </svg>
+          <h3 class="options__title">Набор массы</h3>
+          <p class="options__text">
+            Заработать авторитет среди дворовых котов и даже собак?
+            Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+          </p>
+          <a class="options__link" href="catalog.html">
+            <span>Каталог pro</span>
+          </a>
+        </li>
+      </ul>
+    </section>
+    <section class="advantages">
+      <h2 class="advantages__title title-h2">Как это работает</h2>
+      <ol class="advantages__list">
+        <li class="advantages__item advantages__item--image-1">
+          <p class="advantages__text">Функциональное питание содержит только полезные питательные вещества.</p>
+        </li>
+        <li class="advantages__item advantages__item--image-2">
+          <p class="advantages__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+        </li>
+        <li class="advantages__item advantages__item--image-3">
+          <p class="advantages__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
+        </li>
+        <li class="advantages__item advantages__item--image-4">
+          <p class="advantages__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+        </li>
+      </ol>
+    </section>
+    <section class="example">
+      <h2 class="example__title title-h2">Живой пример</h2>
+      <div class="example__wrapper">
+        <p class="example__paragraph">
+          Борис сбросил 5 кг за 2 месяца, просто заменив свой
+          обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих
+          привычек и по-прежнему спит по 16 часов в день.
+        </p>
+        <div class="example__info">
+          <p class="example__text">Снижение веса</p>
+          <span class="example__span">5 КГ</span>
+        </div>
+        <div class="example__info">
+          <p class="example__text">Затрачено времени</p>
+          <span class="example__span">60 ДНЕЙ</span>
+        </div>
+        <div class="example__aside">
+          <span>Затраты на питание:</span>
+          <span>15 000 РУБ.</span>
+        </div>
+      </div>
+      <picture>
+        <source type="image/png" media="(min-width: 1440px)" width="560" height="512"
+          srcset="images/slides-cat-desktop@1x.png 1x, images/slides-cat-desktop@2x.png 2x">
+        <source type="image/png" media="(min-width: 768px)" width="560" height="512"
+          srcset="images/slides-cat-tablet@1x.png 1x, images/slides-cat-tablet@2x.png 2x">
+        <img class="example__image" src="images/slides-cat-mobile@1x.png" srcset="images/slides-cat-mobile@2x.png 2x"
+          width="280" height="256" alt="Сравнение толстого и худого кота.">
+      </picture>
+    </section>
+    <section class="contacts">
+      <div class="contacts__wrapper">
+        <h2 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h2>
+        <address class="contacts__address-wrapper">
+          <span class="contacts__address">ул. Большая Конюшенная, д. 19/8</span>
+          <span class="contacts__city">Санкт-Петербург</span>
+        </address>
+      </div>
+      <picture>
+        <source type="image/png" media="(min-width: 1440px)" width="1440" height="400"
+          srcset="images/map-desktop@1x.png 1x, images/map-desktop@2x.png  2x">
+        <source type="image/png" media="(min-width: 768px)" width="768" height="400"
+          srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png  2x">
+        <img class="contacts__map" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320"
+          height="362" alt="Карта.">
+      </picture>
+    </section>
+  </main>
+  <footer class="footer">
+    <a class="footer__logo" href="index.html">
+      <img src="images/logo-text.svg" width="128" height="24" alt="Логотип Cat Energy.">
+    </a>
+    <div class="footer__social social">
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social_link" href="https://vk.com">
+            <svg class="social__image" width="29" height="17">
+              <use href="images/icons/stack.svg#vkontakte"></use>
+            </svg>
+            <span class="visually-hidden">Вконтакте.</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social_link" href="https://youtube.com">
+            <svg class="social__image" width="24" height="18">
+              <use href="images/icons/stack.svg#youtube"></use>
+            </svg>
+            <span class="visually-hidden">Youtube.</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social_link" href="https://telegram.com">
+            <svg class="social__image" width="19" height="17">
+              <use href="images/icons/stack.svg#telegram"></use>
+            </svg>
+            <span class="visually-hidden">Телеграм.</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer__dev dev">
+      <a class="dev__link" href="https://htmlacademy.ru">
+        <p class="dev__text">HTML Academy</p>
+        <svg class="dev__image" width="27" height="34">
+          <use href="images/icons/stack.svg#html-academy"></use>
+        </svg>
+      </a>
+    </div>
+  </footer>
 </body>
+
 </html>
