Добавила базовую стилизацию

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,8 +15,8 @@
   <header class="header">
     <a class="header__link-logo" href="index.html">
       <picture>
-        <source type="image/png" media="(min-width: 1440px)" width="70" height="59" srcset="images/logo-desktop">
-        <source type="image/png" media="(min-width: 768px)" width="60" height="50" srcset="images/logo-tablet">
+        <source type="image/png" media="(min-width: 1440px)" width="70" height="59" srcset="images/logo-desktop.svg">
+        <source type="image/png" media="(min-width: 768px)" width="60" height="50" srcset="images/logo-tablet.svg">
         <img class="header__image" src="images/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy.">
       </picture>
       <img src="images/logo-text.svg" width="101" height="18" alt="Логотип Cat Energy.">
