--- a/source/form.html
+++ b/source/form.html
@@ -15,8 +15,8 @@
   <header class="header">
     <a class="header__link-logo" href="index.html">
       <picture>
-        <source type="image/png" media="(min-width: 1440px)" width="70" height="59" srcset="images/logo-desktop">
-        <source type="image/png" media="(min-width: 768px)" width="60" height="50" srcset="images/logo-tablet">
+        <source type="image/png" media="(min-width: 1440px)" width="70" height="59" srcset="images/logo-desktop.svg">
+        <source type="image/png" media="(min-width: 768px)" width="60" height="50" srcset="images/logo-tablet.svg">
         <img class="header__image" src="images/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy.">
       </picture>
       <img src="images/logo-text.svg" width="101" height="18" alt="Логотип Cat Energy.">
@@ -94,8 +94,8 @@
 
         <fieldset class="form__comments" id="comment-form">
           <legend class="form__comments-title title-h3">Комментарий</legend>
-          <input class="form__input" type="text" id="comment-form-comments" name="Расскажите обо всех повадках кота">
-          <label class="form__label" for="comment-form-comments">Комментарий</label>
+          <label class="form__label visually-hidden" for="comment-form-comments">Комментарий</label>
+          <input class="form__input form__label-comment" type="text" id="comment-form-comments" name="Расскажите обо всех повадках кота">
         </fieldset>
 
         <fieldset class="form__checbox" id="add-form">
