--- a/source/index.html
+++ b/source/index.html
@@ -184,10 +184,12 @@
     </div>
     <div class="footer__dev dev">
       <a class="dev__link" href="https://htmlacademy.ru">
-        <p class="dev__text">HTML Academy</p>
+        <p class="dev__text">HTML Academy</p></a>
+        <a class="dev__link" href="https://htmlacademy.ru">
         <svg class="dev__image" width="27" height="34">
           <use href="images/icons/stack.svg#html-academy"></use>
         </svg>
+        <p class="visually-hidden">Логотип разработчика HTML Academy.</p></a>
       </a>
     </div>
   </footer>
