--- a/source/catalog.html
+++ b/source/catalog.html
@@ -280,15 +280,11 @@
         </li>
         <li class="catalog__item catalog-card">
           <div class="catalog-card__wrapper">
-            <a class="catalog-card__link" href="product.html">
-              <span class="visually-hidden">Подробнее.</span>
-            </a>
-            <a class="catalog-card__link-text" href="product.html">
-              <h3 class="catalog-card__title title-h3">Показать еще 100500 товаров</h3>
-            </a>
-            <p class="catalog-card__text">На самом деле вкусов гораздо больше!</p>
-          </div>
-          <button class="catalog-card__button button button--secondly" type="button">Показать все</button>
+            <div>
+              <dt class="catalog-card__title title-h3">Показать еще 100500 товаров</dt>
+              <dd class="catalog-card__text">На самом деле вкусов гораздо больше!</dd>
+            </div>
+            <button class="catalog-card__button button button--secondly" type="button">Показать все</button>
         </div>
         </li>
       </ul>
