--- a/source/form.html
+++ b/source/form.html
@@ -41,12 +41,12 @@
     </nav>
   </header>
   <main>
-    <div class="info-block">
-      <h1 class="info-block__title title-h2">Подбор программы</h1>
+    <section class="info-block">
+      <h2 class="info-block__title title-h2">Подбор программы</h2>
       <p class="info-block__text">Заполните анкету, и мы подберем программу питания для вашего кота</p>
-      <form class="info-block__form form" action="#">
+      <form class="info-block__form form" action="form.html" method="post">
 
-        <fieldset class="form__fieldset" id="pet-form">
+        <fieldset class="form__data fieldset" id="pet-form">
           <legend class="visually-hidden">Данные питомца.</legend>
           <div class="form__section">
             <div class="form__item">
@@ -62,65 +62,68 @@
               <label class="form__label" for="pet-form-age">Возраст (лет):</label>
               <input class="form__input" type="number" id="pet-form-age" min="0" max="70" name="data" placeholder="7">
             </div>
-            <div class="info-block__radio-button radio-button">
-              <div class="form__item">
-                <input class="form__input" type="radio" id="pet-form-weight-loss" name="diet" checked>
-                <label class="form__label" for="pet-form-weight-loss">Похудение</label>
+            <fieldset class="form__radio">
+              <legend class="visually-hidden">Радиокнопки.</legend>
+              <div class="form__radio-container">
+              <label class="form__radio-item">
+                <input class="form__radio-input" type="radio" name="diet" value="less-weight" checked>
+                <span class="form__radio-label">Похудение</span>
+              </label>
+              <label class="form__radio-item">
+                <input class="form__radio-input" type="radio" name="diet" value="more-weight">
+                <span class="form__radio-label">Набор массы</lspan>
+              </label>
+              <label class="form__radio-item">
+                <input class="form__radio-input" type="radio" name="diet" value="idk">
+                <span class="form__radio-label">Не знаю (Нужен ваш совет)</span>
+              </label>
               </div>
-              <div class="form__item">
-                <input class="form__input" type="radio" id="pet-form-weight-gain" name="diet">
-                <label class="form__label" for="pet-form-weight-gain">Набор массы</label>
-              </div>
-              <div class="form__item">
-                <input class="form__input" type="radio" id="pet-form-idk" name="diet">
-                <label class="form__label" for="pet-form-idk">Не знаю (Нужен ваш совет)</label>
-              </div>
-            </div>
+            </fieldset>
           </div>
         </fieldset>
 
 
-        <fieldset class="form__contacts-owner" id="owner-form">
+        <fieldset class="form__fieldset form__fieldset--contacts-owner">
           <legend class="form__contacts-owner-title title-h3">Контактные данные (владельца кота)</legend>
+           <label class="form__item"><span class="form__label">E-mail:*</span>
+              <input class="form__input" type="email" name="email" placeholder="кuklachev@gmail.com">
+            </label>
+
           <div class="form__item">
-            <label class="form__label" for="owner-form-email">E-mail:*</label>
-            <input class="form__input" type="email" id="owner-form-email" name="кuklachev@gmail.com">
-          </div>
-          <div class="form__item">
-            <label class="form__label" for="owner-form-number">Телефон:*</label>
-            <input class="form__input" type="number" id="owner-form-number" name="8 (960) 900-60-90">
+            <label class="form__label">Телефон:*
+              <input class="form__input" type="number" name="number" placeholder="8 (960) 900-60-90">
+            </label>
           </div>
         </fieldset>
 
-        <fieldset class="form__comments" id="comment-form">
-          <legend class="form__comments-title title-h3">Комментарий</legend>
-          <label class="form__label visually-hidden" for="comment-form-comments">Комментарий</label>
-          <input class="form__input form__label-comment" type="text" id="comment-form-comments" name="Расскажите обо всех повадках кота">
+        <fieldset class="form__fieldset form__fieldset--comments" id="comment-form">
+          <p class="form__label">Комментарий</p>
+          <textarea class="form__input" name="comment" rows="10">Расскажите обо всех повадках кота</textarea>
         </fieldset>
 
-        <fieldset class="form__checbox" id="add-form">
-          <legend class="form__checbox-title title-h3">Дополнительно</legend>
-          <div class="form__item">
-            <input class="form__input" type="checkbox" id="add-form-sugar" name="additional" checked>
-            <label class="form__label" for="add-form-sugar">Сахарозаменитель</label>
-          </div>
-          <div class="form__item">
-            <input class="form__input" type="checkbox" id="add-form-water" name="additional">
-            <label class="form__label" for="add-form-water">Питьевая вода</label>
-          </div>
-          <div class="form__item">
-            <input class="form__input" type="checkbox" id="add-form-milk" name="additional">
-            <label class="form__label" for="add-form-milk">Молоко</label>
-          </div>
-          <div class="form__item">
-            <input class="form__input" type="checkbox" id="add-form-vitamins" name="additional">
-            <label class="form__label" for="add-form-vitamins">Витамины</label>
-          </div>
+        <fieldset class="form__fieldset form__fieldset--checkbox">
+          <legend class="form__checkbox-title title-h3">Дополнительно</legend>
+          <label class="form__item">
+            <input class="form__input" type="checkbox" name="sugar" checked>
+            <span class="form__label">Сахарозаменитель</span>
+          </label>
+          <label class="form__item">
+            <input class="form__input" type="checkbox" name="water">
+            <span class="form__label">Питьевая вода</span>
+          </label>
+          <label class="form__item">
+            <input class="form__input" type="checkbox" name="milk">
+            <span class="form__label">Молоко</span>
+          </label>
+          <label class="form__item">
+            <input class="form__input" type="checkbox" name="vitamins">
+            <span class="form__label">Витамины</span>
+          </label>
           <button class="form__button button button--primary" type="button">Отправить заявку</button>
         </fieldset>
       </form>
       <p class="info-block__add-text">* — Обязательные поля</p>
-    </div>
+    </section>
     <section class="contacts">
       <div class="contacts__wrapper">
         <h2 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h2>
